crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_paren_still_parens_property_access.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 607
expression: "format_with_errors(\"MATCH (a) RETURN (a.name)\")"
---
SOURCE_FILE@0..25
  STATEMENT@0..25
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..25
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..25
        RETURN_ITEMS@16..25
          RETURN_ITEM@16..25
            PAREN_EXPR@16..25
              WHITESPACE@16..17 " "
              L_PAREN@17..18 "("
              PROP_ACCESS_EXPR@18..24
                VAR_EXPR@18..19
                  IDENT@18..19 "a"
                DOT@19..20 "."
                IDENT@20..24 "name"
              R_PAREN@24..25 ")"
